0.8.0/_sources/generated/statsmodels.discrete.discrete_model.DiscreteResults.rst.txt
statsmodels.discrete.discrete_model.DiscreteResults
===================================================

.. currentmodule:: statsmodels.discrete.discrete_model

.. autoclass:: DiscreteResults

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
    
    
      ~DiscreteResults.aic
    
    
      ~DiscreteResults.bic
    
    
      ~DiscreteResults.bse
    
    
      ~DiscreteResults.conf_int
    
    
      ~DiscreteResults.cov_params
    
    
      ~DiscreteResults.f_test
    
    
      ~DiscreteResults.fittedvalues
    
    
      ~DiscreteResults.get_margeff
    
    
      ~DiscreteResults.initialize
    
    
      ~DiscreteResults.llf
    
    
      ~DiscreteResults.llnull
    
    
      ~DiscreteResults.llr
    
    
      ~DiscreteResults.llr_pvalue
    
    
      ~DiscreteResults.load
    
    
      ~DiscreteResults.normalized_cov_params
    
    
      ~DiscreteResults.predict
    
    
      ~DiscreteResults.prsquared
    
    
      ~DiscreteResults.pvalues
    
    
      ~DiscreteResults.remove_data
    
    
      ~DiscreteResults.save
    
    
      ~DiscreteResults.summary
    
    
      ~DiscreteResults.summary2
    
    
      ~DiscreteResults.t_test
    
    
      ~DiscreteResults.tvalues
    
    
      ~DiscreteResults.wald_test
    
    
      ~DiscreteResults.wald_test_terms
    
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~DiscreteResults.use_t
   
   